--- a/Assets/Css/Portfolio.css
+++ b/Assets/Css/Portfolio.css
@@ -54,7 +54,7 @@ p {
 
 .line {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1);
   align-items: center;
 }
 
