--- a/itsjustme/src/index.css
+++ b/itsjustme/src/index.css
@@ -1,16 +1,20 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #fcf8df;
+  background-color: #f8efdb;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: ;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 320px;
+  min-height: 100vh;
 }
