--- a/Assets/Css/itsjustme.css
+++ b/Assets/Css/itsjustme.css
@@ -3,7 +3,9 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: #ffffff;
+  background: url("../Img/itsJustMe/bg.jpg") no-repeat center;
+  background-color: #E6DED1;
+  background-size: 60vw;
 }
 
 .button {
