--- a/15thMonth/src/index.css
+++ b/15thMonth/src/index.css
@@ -4,8 +4,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #fafffd;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,9 +16,10 @@
 body {
   margin: 0;
   display: flex;
-  flex-wrap: wrap;
   place-items: center;
   justify-content: center;
-  width: 320px;
+  text-align: center;
+  width: 100vw;
   height: 100vh;
+  overflow: hidden ;
 }
